# -app

./: .gitignore  CLAUDE.md  README.md  electron-main.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: gitcommit-agent.md  quality-engineer.md  tester.md
.claude/hooks/: keyword-trigger.sh
.claude/skills/comments-check/: SKILL.md
.claude/skills/rebuild-app/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/unit-test/: SKILL.md
_test_electron/: main.cjs  package.json
src/: App.tsx  main.tsx  storage.test.ts  storage.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddExpense.tsx  CategoryManager.tsx  CategorySelector.tsx  ExpenseList.tsx  MonthlyStats.tsx  SnakeGame.tsx
src/styles/: app.css
